--- a/action.yml
+++ b/action.yml
@@ -8,11 +8,11 @@ inputs:
     description: 'Path from cwd where file is to be created'
     required: true
     default: ''
-  file:
+  name:
     description: 'The name of the file to be created with extention'
     required: true
-  content:
-    description: 'The content of the file'
+  params:
+    description: 'The key-values pairs of the file'
     required: true
     default: ''
 runs:
